<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium"
    app:cardElevation="@dimen/margin_small">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons">

        <ImageView
            android:id="@+id/iv_hero_movie"
            android:layout_width="@dimen/movie_list_image_width"
            android:layout_height="@dimen/movie_list_image_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/anime" />


        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_favorite_24dp"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/iv_hero_movie"
            android:text="@string/name"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_name"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_toRightOf="@id/iv_hero_movie"
            android:text="@string/category"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular" />

        <TextView
            android:id="@+id/lbl_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_name"
            android:layout_below="@id/tv_category"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_toRightOf="@id/iv_hero_movie"
            android:text="@string/desc"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/lbl_popularity"
            android:layout_below="@id/tv_category"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_toRightOf="@id/lbl_popularity"
            android:text="@string/desc"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular_2x" />

        <include
            android:id="@+id/vp_rating_bar"
            layout="@layout/view_pod_rating_bar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@id/tv_name"
            android:layout_below="@id/lbl_popularity"
            android:layout_marginLeft="@dimen/margin_medium_n"
            android:layout_marginTop="@dimen/margin_medium_2_n"
            android:layout_toRightOf="@id/iv_hero_movie" />

        <Button
            android:id="@+id/btn_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_hero_movie"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/bg_rounded"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_xlarge"
            android:paddingRight="@dimen/margin_xlarge"
            android:text="@string/lbl_for_btn_movie_overview"
            android:textAllCaps="false"
            android:textColor="@color/icons" />

    </RelativeLayout>
</android.support.v7.widget.CardView>